Justin Wang's First Commit

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <section id="about-me">
         <h2>About Me</h2>
         <p>Hi, I'm Justin! I'm a 14-year-old Freshman from Texas.</p>
+        <p>College Station Class of 2029</p>
     </section>
 
     <section id="awards">
@@ -34,14 +35,21 @@
         <h3>Research & Summer Programs</h3>
         <h4>2025</h4>
         <ul>
-            <li><strong>?? FILL THIS IN ??</strong> - EXAMPLE TEXT</li>
+            <li><strong>JSMCR Math Camp</strong> - Learned Game, Set, Logic, and Graph Theory </li>
+            <li><strong>HPS Orchestra Camp</strong> - Performed at Carnegie Hall</strong></li>
         </ul>
 
         <h3>Competitions & Recognitions</h3>
-        <h4>2025</h4>
+        <h4>2023</h4>
         <ul>
-            <li>AIME National Qualifier</li>
+            <li>AMC 8 Honor Roll of Distinction</li>
+            <li>UIL Regionals - 4th Place, Math</li>
+        </ul>
+        <h4>2024</h4>
+        <ul>
+            <li>AIME Floor National Qualifier</li>
             <li>AMC 10 Honor Roll of Distinction</li>
+            <li></li>
             
         </ul>
     </section>
