justin wang 2nd commit

--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         <ul>
             <li>AMC 8 Honor Roll of Distinction</li>
             <li>UIL Regionals - 4th Place, Math</li>
+            <li>AMC 10 Certificate of Achievement</li>
         </ul>
         <h4>2024</h4>
         <ul>
             <li>AIME Floor National Qualifier</li>
             <li>AMC 10 Honor Roll of Distinction</li>
-            <li></li>
+            <li>UIL Regionals</li></strong> - 1st Place in Mathematics, 4th Place in Number Sense, 5th Place in Calculator Applications</strong></li>
             
         </ul>
     </section>
