justin wang 3rd commit# Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h4>2023</h4>
         <ul>
             <li>AMC 8 Honor Roll of Distinction</li>
-            <li>UIL Regionals - 4th Place, Math</li>
+            <li>UIL Regionals - 4th Place in Mathematics</li>
             <li>AMC 10 Certificate of Achievement</li>
         </ul>
         <h4>2024</h4>
