--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
             <li>AIME Floor National Qualifier</li>
             <li>AMC 10 Honor Roll of Distinction</li>
-            <li><strong>UIL Regionals</li></strong> - 1st Place in Mathematics, 4th Place in Number Sense, 5th Place in Calculator Applications</strong></li>
+            <li><strong>UIL Regionals</strong> - 1st Place in Mathematics, 4th Place in Number Sense, 5th Place in Calculator Applications</strong></li>
             
         </ul>
     </section>
