--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <h4>2023</h4>
         <ul>
             <li>AMC 8 Honor Roll of Distinction</li>
-            <li>UIL Regionals - 4th Place in Mathematics</li>
+            <li>UIL Regionals - 4th Place in Math</li>
             <li>AMC 10 Certificate of Achievement</li>
         </ul>
         <h4>2024</h4>
         <ul>
             <li>AIME Floor National Qualifier</li>
             <li>AMC 10 Honor Roll of Distinction</li>
-            <li><strong>UIL Regionals</strong> - 1st Place in Mathematics, 4th Place in Number Sense, 5th Place in Calculator Applications</strong></li>
+            <li><strong>UIL Regionals</strong> - 1st Place in Math, 4th Place in Number Sense, 5th Place in Calculator</strong></li>
             
         </ul>
     </section>
