--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <section id="about-me">
         <h2>About Me</h2>
         <p>Hi, I'm Justin! I'm a 14-year-old Freshman from Texas.</p>
-        <p>College Station Class of 2029</p>
+        <p>I love playing tennis, chilling with friends, and playing games.</p>
+        <p>I'm passionate about violin, competition math, and learning computer science.</p>
+        <p> I speak 3 languages: English, Chinese, and Spanish</p>
+        <p>College Station High School Class of 2029</p>
     </section>
 
     <section id="awards">
@@ -43,16 +46,25 @@
         <h4>2023</h4>
         <ul>
             <li>AMC 8 Honor Roll of Distinction</li>
-            <li>UIL Regionals - 4th Place in Math</li>
             <li>AMC 10 Certificate of Achievement</li>
+            <li>12th Chair in Region Orchestra</li>
         </ul>
         <h4>2024</h4>
         <ul>
             <li>AIME Floor National Qualifier</li>
             <li>AMC 10 Honor Roll of Distinction</li>
-            <li><strong>UIL Regionals</strong> - 1st Place in Math, 4th Place in Number Sense, 5th Place in Calculator</strong></li>
+            <li>5th Chair in Region Orchestra</li>
+            <li>UIL Regionals - 4th Place in Math</li>
+            <li>Taught AMC 8 Training Class</li>
             
         </ul>
+        <h4>2025</h4>
+        <ul>
+            <li><strong>UIL Regionals</strong> - 1st Place in Math, 4th Place in Number Sense, 5th Place in Calculator</strong></li>
+            <li>5th Chair in Region Orchestra</li>
+            <li>Taught AMC 8 Training Class</li>
+        </ul>
+
     </section>
 
     <section id="certifications">
