--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
             <li>AMC 10 Honor Roll of Distinction</li>
             <li>5th Chair in Region Orchestra</li>
             <li>UIL Regionals - 4th Place in Math</li>
-            <li>Taught AMC 8 Training Class</li>
             
         </ul>
         <h4>2025</h4>
         <ul>
             <li><strong>UIL Regionals</strong> - 1st Place in Math, 4th Place in Number Sense, 5th Place in Calculator</strong></li>
             <li>5th Chair in Region Orchestra</li>
-            <li>Taught AMC 8 Training Class</li>
         </ul>
 
     </section>
@@ -88,7 +86,7 @@
 
     <section id="education">
         <h3>Education</h3>
-        <h4>2026</h4>
+        <h4>2025</h4>
         <ul>
             <li>AP Human Geography</li>
             <li>AP Computer Science A</li>
@@ -105,7 +103,7 @@
 
         <h3>Leadership</h3>
         <ul>
-            <li>FILLER</li>
+            <li>Taught AMC 8 Training Class for 2 Semesters</li>
         </ul>
     </section>
 
